--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,16 +1,19 @@
 version: '3.9'
 services:
-  python-template:
-    image: python-template:latest
+  gateway:
+    image: gateway:latest
     environment:
       - RUN_MODE=DEV
       - PORT=12345
+      - USERS_URL=http://users:12345
     volumes:
       - ./app:/code/app
+    ports:
+      - "12346:12345"
     restart: on-failure
+    command: uvicorn app.main:app --host=0.0.0.0 --port=12345 --reload
     networks:
       - eventito-dev-network
-
 
 networks:
   eventito-dev-network:
