--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -5,6 +5,7 @@ services:
     environment:
       - PORT=12345
       - BACKEND_URL=http://backend:12345
+      - FIREBASE_KEY=${FIREBASE_KEY}
     volumes:
       - ./firebasekey.json:/usr/src/firebasekey.json
       - ./app:/usr/src/app
